--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "bin": {
     "ironpairs": "./bin/ironpairs.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/IronPTSolutions/ironpairs.git"
+  },
   "preferGlobal": true,
   "license": "Apache-2.0",
   "author": ""
