--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ironpairs",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Script for creating pairs or threesomes from a json",
   "main": "./lib/index.js",
   "scripts": {
@@ -15,5 +15,5 @@
   },
   "preferGlobal": true,
   "license": "Apache-2.0",
-  "author": ""
+  "author": "Pablo Laso & Francisco Molpeceres"
 }
